--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
   "name": "ai-ask",
-  "private": true,
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "AI Ask - 一个简洁高效的AI问答助手",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "tauri": "tauri",
-    "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build"
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "tauri": "tauri"
   },
-  "devDependencies": {
-    "@tauri-apps/cli": "^2",
-    "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "svelte": "^5.41.2",
-    "svelte-check": "^4.3.3",
-    "tslib": "^2.8.1",
-    "typescript": "^5.9.3",
-    "vite": "^7.1.12"
-  },
+  "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-clipboard-manager": "^2",
-    "@tauri-apps/plugin-shell": "^2"
+    "@tauri-apps/plugin-global-shortcut": "^2.3.1",
+    "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-shell": "^2.3.3",
+    "@tauri-apps/plugin-store": "^2.4.1",
+    "lucide-svelte": "^0.548.0"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/kit": "^2.9.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@tauri-apps/cli": "^2",
+    "autoprefixer": "10",
+    "postcss": "8",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.0",
+    "tailwindcss": "^3.4.18",
+    "typescript": "~5.6.2",
+    "vite": "^6.0.3"
   }
 }
