--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,8 @@ reqwest = { version = "0.11", default-features = false, features = [
     "rustls-tls",
 ] }
 tokio = { version = "1", features = ["full"] }
+log = "0.4"
+env_logger = "0.11"
 
 [profile.release]
 strip = true
