fix: implement cross-window communication for quick-ask to main window
- Add event listener in main window (+page.svelte) for "quick-ask-show-platform"
- Show main window and switch to chat view when quick-ask submits
- Clean up event listeners in onDestroy
- Remove unused appState import from quick-ask page
- Add debug logging for cross-window event flow

This completes the quick-ask feature by properly coordinating state between
the isolated quick-ask window and the main window using Tauri's event system.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,20 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+# Rust build artifacts
+/target/
+/src-tauri/target/
+**/*.rlib
+**/*.dSYM/
+
+# Logs & coverage
+*.log
+logs/
+coverage/
+
+# IDE/editor
+.idea/
+.vscode/
+
+# Dist outputs
+/dist/
