--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ tauri-plugin-opener = "2"
 tauri-plugin-store = "2"
 tauri-plugin-global-shortcut = "2"
 tauri-plugin-shell = "2"
+tauri-plugin-clipboard-manager = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.11", default-features = false, features = [
@@ -27,6 +28,7 @@ reqwest = { version = "0.11", default-features = false, features = [
 tokio = { version = "1", features = ["full"] }
 log = "0.4"
 env_logger = "0.11"
+base64 = "0.22"
 
 [profile.release]
 strip = true
