--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "lint:fix": "eslint src --fix",
     "lint:rust": "cd src-tauri && cargo fmt --check && cargo clippy -- -D warnings",
     "lint:rust:fix": "cd src-tauri && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "release:validate": "node .github/scripts/validate-version.js",
+    "release:test": "bash scripts/release/test-build.sh"
   },
   "license": "MIT",
   "dependencies": {
