chore: 移除本地构建脚本，仅使用GitHub Actions自动化
- 删除 scripts/release/ 下所有本地构建辅助脚本
  - test-build.sh: 本地构建测试
  - build-android.sh / build-ios.sh: 移动平台本地构建
  - prepare-release.sh: 发布准备脚本
- 更新 package.json: 移除 release:test 脚本
- 更新文档以反映纯 GitHub Actions 方案
  - plan.md: 移除本地脚本章节
  - tasks.md: 更新任务列表和文件结构
  - quickstart.md: 替换本地测试为版本验证
- 所有构建完全通过 GitHub Actions 自动执行

符合原始需求：只使用 GitHub Actions 提供的能力实现

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "lint:rust": "cd src-tauri && cargo fmt --check && cargo clippy -- -D warnings",
     "lint:rust:fix": "cd src-tauri && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
     "tauri": "tauri",
-    "release:validate": "node .github/scripts/validate-version.js",
-    "release:test": "bash scripts/release/test-build.sh"
+    "release:validate": "node .github/scripts/validate-version.js"
   },
   "license": "MIT",
   "dependencies": {
