ci(build-desktop): remove undefined workflow outputs and fix Linux-only step condition\n\n- Drop workflow_call outputs that referenced undefined job outputs\n- Use runner.os == 'Linux' for dependency install step

--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -22,10 +22,7 @@ name: Build Desktop Platforms
 
 on:
   workflow_call:
-    outputs:
-      artifacts:
-        description: "JSON array of artifact names"
-        value: ${{ jobs.build.outputs.artifacts }}
+    # Reusable workflow, no outputs required
 
 jobs:
   build:
@@ -115,7 +112,7 @@ jobs:
       
       # Install Linux dependencies (only on Ubuntu)
       - name: Install Linux dependencies
-        if: matrix.os == 'ubuntu-latest'
+        if: ${{ runner.os == 'Linux' }}
         run: |
           sudo apt-get update
           sudo apt-get install -y \
