--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,11 @@ on:
   push:
     tags:
       - 'v*.*.*'
+      - 'v*'          # allow any v-prefixed tag
+      - '*.*.*'       # allow tags without v prefix
+  # Also run when a GitHub Release is published
+  release:
+    types: [published]
   
   # Allow manual trigger with version input
   workflow_dispatch:
@@ -114,13 +119,21 @@ jobs:
       - name: Get version from tag
         id: version
         run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             echo "VERSION=${{ inputs.version }}" >> $GITHUB_OUTPUT
             echo "TAG=v${{ inputs.version }}" >> $GITHUB_OUTPUT
-          else
-            VERSION=${GITHUB_REF#refs/tags/v}
+          elif [ "${{ github.event_name }}" = "release" ]; then
+            TAG_NAME="${{ github.event.release.tag_name }}"
+            echo "TAG=${TAG_NAME}" >> $GITHUB_OUTPUT
+            # Strip leading 'v' if present to get pure version number
+            VERSION=${TAG_NAME#v}
             echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
-            echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+          else
+            # push event on tag
+            TAG_REF="${GITHUB_REF#refs/tags/}"
+            echo "TAG=${TAG_REF}" >> $GITHUB_OUTPUT
+            VERSION=${TAG_REF#v}
+            echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
           fi
       
       # Download all build artifacts
