chore: bump version to 0.0.2-test
- Update package.json, tauri.conf.json, Cargo.toml to 0.0.2-test
- Prepare for testing release workflow

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ai-ask"
-version = "1.0.0"
+version = "0.0.2-test"
 description = "AI Ask - 一个简洁高效的AI问答助手"
 authors = ["AI Ask Team"]
 edition = "2021"
