--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -239,9 +239,13 @@ jobs:
           cat CHANGELOG.md >> RELEASE_NOTES.md
           
           # Set output for GitHub Actions (escape for multiline)
-          echo 'NOTES<<__AI_ASK_NOTES__' >> "$GITHUB_OUTPUT"
-          cat RELEASE_NOTES.md >> "$GITHUB_OUTPUT"
-          echo '__AI_ASK_NOTES__' >> "$GITHUB_OUTPUT"
+          python <<'PY' >> "$GITHUB_OUTPUT"
+          from pathlib import Path
+          notes = Path("RELEASE_NOTES.md").read_text()
+          print("NOTES<<__AI_ASK_NOTES__")
+          print(notes, end="" if notes.endswith("\n") else "\n")
+          print("__AI_ASK_NOTES__")
+          PY
       
       # List all artifacts for debugging
       - name: List artifacts
