--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ai-ask"
-version = "0.0.2-test"
+version = "0.0.1"
 description = "AI Ask - 一个简洁高效的AI问答助手"
 authors = ["AI Ask Team"]
 edition = "2021"
