--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:rust": "cd src-tauri && cargo fmt --check && cargo clippy -- -D warnings",
     "lint:rust:fix": "cd src-tauri && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
     "tauri": "tauri",
+    "version:sync": "node .github/scripts/sync-version.js",
     "release:validate": "node .github/scripts/validate-version.js"
   },
   "license": "MIT",
