--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -51,9 +51,6 @@ jobs:
         with:
           version: 8
       
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-      
       # 检查版本号是否有变化
       - name: Check if version changed
         id: version-check
@@ -62,16 +59,8 @@ jobs:
           CURRENT_VERSION=$(node -p "require('./src-tauri/tauri.conf.json').version")
           echo "Current version: $CURRENT_VERSION"
           
-          # 获取上一个 commit 的版本
-          git checkout HEAD~1 -- src-tauri/tauri.conf.json 2>/dev/null || true
-          if [ -f src-tauri/tauri.conf.json.old ]; then
-            PREVIOUS_VERSION=$(node -p "require('./src-tauri/tauri.conf.json').version" 2>/dev/null || echo "none")
-          else
-            PREVIOUS_VERSION="none"
-          fi
-          
-          # 恢复当前版本
-          git checkout HEAD -- src-tauri/tauri.conf.json
+          # 使用 git show 获取上一个 commit 的版本（不改变工作区）
+          PREVIOUS_VERSION=$(git show HEAD~1:src-tauri/tauri.conf.json 2>/dev/null | node -p "JSON.parse(require('fs').readFileSync('/dev/stdin', 'utf8')).version" 2>/dev/null || echo "none")
           
           echo "Previous version: $PREVIOUS_VERSION"
           
@@ -84,6 +73,11 @@ jobs:
             echo "changed=false" >> $GITHUB_OUTPUT
             echo "Version unchanged: $CURRENT_VERSION"
           fi
+      
+      # 安装依赖（仅在版本变更时）
+      - name: Install dependencies
+        if: steps.version-check.outputs.changed == 'true'
+        run: pnpm install --frozen-lockfile
       
       # 同步版本号到其他文件
       - name: Sync version to other files
