--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -16,8 +16,13 @@ name: Version Check and Auto Release
 #
 # 注意事项：
 #   - 只在 main 分支触发
-#   - 需要有 GITHUB_TOKEN 权限创建 tag
+#   - 需要配置 PAT_TOKEN secret 以触发后续工作流（可选，无 PAT 时使用 GITHUB_TOKEN）
 #   - 版本号必须符合 semver 规范
+#
+# Secret 配置（推荐）：
+#   PAT_TOKEN: Personal Access Token，需要 repo 和 workflow 权限
+#   - 如果配置了 PAT_TOKEN，tag 推送会触发 release.yml
+#   - 如果未配置，将使用 GITHUB_TOKEN（但不会触发后续工作流，需手动触发）
 
 on:
   push:
@@ -39,7 +44,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 2  # 需要至少两个 commit 来比较变更
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}  # 使用 PAT 以触发后续工作流
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
