--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -110,7 +110,7 @@ jobs:
       - name: Commit version sync changes
         if: steps.version-check.outputs.changed == 'true'
         run: |
-          git add package.json src-tauri/Cargo.toml src/lib/utils/constants.ts
+          git add package.json src-tauri/Cargo.toml src-tauri/Cargo.lock src/lib/utils/constants.ts
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
