--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,10 +23,13 @@ serde_json = "1"
 reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
+    "stream",
 ] }
 tokio = { version = "1", features = ["full"] }
 log = "0.4"
 env_logger = "0.11"
+semver = "1"
+futures-util = "0.3"
 
 [profile.release]
 strip = true
