--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,12 @@ reqwest = { version = "0.11", default-features = false, features = [
 tokio = { version = "1", features = ["full"] }
 log = "0.4"
 env_logger = "0.11"
+anyhow = "1"
+semver = "1"
+time = { version = "0.3", features = ["formatting"] }
+
+[dev-dependencies]
+tempfile = "3"
 
 [profile.release]
 strip = true
