--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,6 +47,7 @@ windows = { version = "0.62.2", features = [
 [target.'cfg(target_os = "macos")'.dependencies]
 accessibility = "0.2"
 core-foundation = "0.10"
+core-graphics = "0.23"
 
 [dev-dependencies]
 tempfile = "3"
