--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -145,58 +145,20 @@ jobs:
       - name: Install frontend dependencies
         run: pnpm install
       
-      # Derive MSI-friendly version (Windows only)
-      # Maps SemVer to numeric-only format (max 65535 per segment):
-      #   0.0.1-alpha.4 -> 0.0.1.10004
-      #   0.0.1-beta.7  -> 0.0.1.20007
-      #   0.0.1-rc.3    -> 0.0.1.30003
-      #   0.0.1         -> 0.0.1.50000
-      - name: Derive MSI-friendly version (Windows only)
-        if: ${{ runner.os == 'Windows' }}
+      # Read app SemVer for artifact naming (all OS)
+      - name: Read app version
         shell: bash
         run: |
-          # Read original SemVer from tauri.conf.json (do not modify files)
           SEMVER=$(node -p "require('./src-tauri/tauri.conf.json').version")
-          echo "Original SemVer: $SEMVER"
-
-          # Map SemVer pre-release to numeric suffix (Windows requirement: max 65535)
-          if [[ "$SEMVER" =~ ^([0-9]+\.[0-9]+\.[0-9]+)-alpha\.([0-9]+)$ ]]; then
-            BASE="${BASH_REMATCH[1]}"
-            NUM="${BASH_REMATCH[2]}"
-            MSI_VERSION="${BASE}.$((10000 + NUM))"
-            echo "Mapped alpha.${NUM} -> $((10000 + NUM))"
-          elif [[ "$SEMVER" =~ ^([0-9]+\.[0-9]+\.[0-9]+)-beta\.([0-9]+)$ ]]; then
-            BASE="${BASH_REMATCH[1]}"
-            NUM="${BASH_REMATCH[2]}"
-            MSI_VERSION="${BASE}.$((20000 + NUM))"
-            echo "Mapped beta.${NUM} -> $((20000 + NUM))"
-          elif [[ "$SEMVER" =~ ^([0-9]+\.[0-9]+\.[0-9]+)-rc\.([0-9]+)$ ]]; then
-            BASE="${BASH_REMATCH[1]}"
-            NUM="${BASH_REMATCH[2]}"
-            MSI_VERSION="${BASE}.$((30000 + NUM))"
-            echo "Mapped rc.${NUM} -> $((30000 + NUM))"
-          elif [[ "$SEMVER" =~ ^([0-9]+\.[0-9]+\.[0-9]+)$ ]]; then
-            # Stable release
-            MSI_VERSION="${SEMVER}.50000"
-            echo "Stable release -> 50000"
-          else
-            # Fallback: strip everything after base version
-            BASE=$(echo "$SEMVER" | sed -E 's/^([0-9]+\.[0-9]+\.[0-9]+).*/\1/')
-            MSI_VERSION="${BASE}.0"
-            echo "WARN: Unrecognized format '$SEMVER', fallback to ${MSI_VERSION}"
-          fi
-
-          echo "MSI-friendly version: $MSI_VERSION"
-
-          # Export variables for later steps
           echo "SEMVER=$SEMVER" >> $GITHUB_ENV
-          echo "MSI_VERSION=$MSI_VERSION" >> $GITHUB_ENV
       
-      # Build Tauri application
-      - name: Build Tauri application
-        env:
-          # On Windows this is a numeric-only version; on other OS it's empty
-          TAURI_APP_VERSION: ${{ env.MSI_VERSION }}
+      # Build Tauri application (Windows: NSIS only)
+      - name: Build Tauri application (Windows)
+        if: ${{ runner.os == 'Windows' }}
+        run: pnpm tauri build --target ${{ matrix.target }} --bundles nsis
+
+      - name: Build Tauri application (Linux/macOS)
+        if: ${{ runner.os != 'Windows' }}
         run: pnpm tauri build --target ${{ matrix.target }}
       
       # Upload artifacts
@@ -208,7 +170,6 @@ jobs:
           path: |
             src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb
             src-tauri/target/${{ matrix.target }}/release/bundle/appimage/*.AppImage
-            src-tauri/target/${{ matrix.target }}/release/bundle/msi/*.msi
             src-tauri/target/${{ matrix.target }}/release/bundle/nsis/*.exe
             src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
             src-tauri/target/${{ matrix.target }}/release/bundle/macos/*.app.tar.gz
