--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,61 +125,21 @@ jobs:
             echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
           fi
       
-      # Download all build artifacts
-      - name: Download Linux x64 artifacts
+      # Download all artifacts from previous jobs into ./artifacts
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          name: linux-x64
-          path: artifacts/linux-x64
-        continue-on-error: true
-      
-      - name: Download Windows x64 artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: windows-x64
-          path: artifacts/windows-x64
-        continue-on-error: true
-      
-      - name: Download macOS Intel artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: macos-intel
-          path: artifacts/macos-intel
-        continue-on-error: true
-      
-      - name: Download macOS ARM64 artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: macos-arm64
-          path: artifacts/macos-arm64
-        continue-on-error: true
-      
-      - name: Download Windows ARM64 artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: windows-arm64
-          path: artifacts/windows-arm64
-        continue-on-error: true
-      
-      - name: Download Android artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: android
-          path: artifacts/android
-        continue-on-error: true
-      
-      - name: Download iOS artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: ios
-          path: artifacts/ios
-        continue-on-error: true
-      
-      # List all artifacts for debugging
+          path: artifacts
+
+      # List all artifacts for debugging (do not fail if none)
       - name: List artifacts
         run: |
           echo "📦 Available artifacts:"
-          find artifacts -type f -exec echo "  {}" \;
+          if [ -d artifacts ]; then
+            find artifacts -type f -exec echo "  {}" \;
+          else
+            echo "  (none)"
+          fi
       
       # Delete existing release if it exists (for re-runs)
       - name: Delete existing release
