--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,6 +42,8 @@ windows = { version = "0.62.2", features = [
     "Win32_System_Com",
     "Win32_System_Ole",
     "Win32_System_Variant",
+    "Win32_System_Threading",
+    "Win32_System_ProcessStatus",
 ] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
