--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2.3.3",
     "@tauri-apps/plugin-store": "^2.4.1",
-    "lucide-svelte": "^0.548.0"
+    "@types/turndown": "^5.0.6",
+    "lucide-svelte": "^0.548.0",
+    "turndown": "^7.2.2",
+    "turndown-plugin-gfm": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
